--- a/css/base/reset.css
+++ b/css/base/reset.css
@@ -54,3 +54,8 @@ input[type="number"] {
 .hidden {
   display: none !important;
 }
+
+.hide * {
+  visibility: hidden;
+  transition: none !important;
+}
